# beast

./: ChangeLog  ChangeLog.win32  Makefile.am  PKG_config.h.in  TODO  TODO.win32  WIN32env.sh  WIN32porting  WIN32todo  acbeast.m4  configure.in
beast-gtk/: Makefile.am  TODO  bstapp.c  bstcanvaslink.c  bstcanvassource.c  bstcanvassource.h  bstcluehunter.c  bstcontrollers.c  bstdefs.h  bstgconfig.c  bstgconfig.h  bstinstrumentview.c  bstitemview.c  bstitemview.h  bstkeybindings.c  bstmain.c  bstmenus.c  bstmenus.h  bstmsgabsorb.c  bstparam-choice.c  bstparam-label.c  bstparam-proxy.c  bstparam-searchpath.c  bstparam-spinner.c  bstparam.c  bstparam.h  bstparamview.c  bstparamview.h  bstpartdialog.c  bstpartview.c  bstpatterneditor.c  bstpianoroll.c  bstpianorollctrl.c  bstpianorollctrl.h  bstplayback.c  bstplayback.h  bstpreferences.c  bstpreferences.h  bstprocbrowser.c  bstprocedure.c  (+33 more)
beast-gtk/gxk/: Makefile.am  gxkparam-entry.c  gxkparam-spinner.c  gxkparam-toggle.c  gxkparam.c  gxkparam.h  gxktexttools.c  gxkutils.c  gxkutils.h
birnet/: Makefile.am  birnet.hh  birnetcore.h  birnetcpu.c  birnetcpu.cc  birnetdebugtools.cc  birnetmsg.c  birnetmsg.cc  birnetos.hh  birnetosunix.cc  birnetoswin32.cc  birnetring.c  birnetring.h  birnetthread.c  birnetthreadimpl.cc  birnetutils.c  birnetutils.cc  birnetutils.h  birnetutils.hh  birnetutilsxx.cc  configure.inc
birnet/tests/: Makefile.am  systest.cc  threads.cc
bse/: .cvsignore  ChangeLog  Makefile.am  TODO  bse.h  bseamplifier.c  bseautodoc.c  bsebindata.c  bsebiquadfilter.c  bseblockutils.hh  bsecategories.c  bsecategories.h  bsecategories.proc  bsecompat.h  bsecomwire.c  bseconstant.c  bsecontainer.c  bsecontainer.h  bsecontainer.proc  bsecore.idl  bsecxxplugin.hh  bsedatapocket.c  bsedatapocket.h  bsedatapocket.proc  bsedefs.h  bseeditablesample.c  bseeditablesample.proc  bseeffectbalance.c  bseeffectfinetune.c  bseeffectnotevolume.c  bseeffectpatternjump.c  bseeffectvolumedelta.c  bseengine.c  bseenginemaster.c  bseenginemaster.h  bseenginenode.h  bseengineschedule.c  bseengineutils.c  bseenums.c  bseenums.h  (+123 more)
bse/tests/: Makefile.am  magictest.c
bsw/: Makefile.am  bsw.h  bswproxy.c  bswproxy.h  bswsignal.c  bswsignal.h  mkapi.c  testbsw.c
bsw-shell/: bswscminterp.c  bswscminterp.h  bswshell.c
data/: Makefile.am  bse.pc.in
docs/: Makefile.am  WRITING.3.texi  beast-index.doxi  beast-index.texi  faq.doxi  quickstart.doxi  quickstart.texi  release-notes.doxi  teximacros.texi
docs/utils/: Makefile.am  xmlantispace.c  xmlantispace.h
doxer/: Config.py
drivers/bse-portaudio/: Makefile.am  configure.in
launchers/: suidmain.c
plugins/: ChangeLog  Makefile.am  Makefile.plugins  bseadder.c  bseatandistort.c  bsefirfilter.c  bsegenosc.c  bseiirfilter.c  bsemixer.c  bsenoise.c  bsesequencer.c  bsesimpleadsr.c  davbassfilter.c  davguitar.c  davorgan.c  davsyndrum.c  davxtalstrings.c
plugins/freeverb/: Makefile.am  bsefreeverb.c
sfi/: .cvsignore  ChangeLog  Makefile.am  TODO  glib-extra.c  glib-extra.h  sfi.h  sficomport.c  sficomport.h  sficomwire.c  sficomwire.h  sfidl-cbase.cc  sfidl-clientc.cc  sfidl-clientcxx.cc  sfidl-corec.cc  sfidl-corecxx.cc  sfidl-generator.cc  sfidl-hostc.cc  sfidl-namespace.h  sfidl-options.cc  sfidl-options.h  sfidl-options.hh  sfidl-parser.cc  sfidl-parser.h  sfidl.cc  sfifilecrawler.c  sfiglue.c  sfiglue.h  sfigluecodec.c  sfigluecodec.h  sfiglueproxy.c  sfiglueproxy.h  sfiparams.c  sfiparams.h  sfiprimitives.c  sfiprimitives.h  sfiserial.c  sfistore.c  sfistore.h  sfithreads.h  (+12 more)
sfi/tests/: Makefile.am  misctests.c
shell/: Makefile.am  bse-scm-glue.boot  bsescm.c  bsescminterp.c  bsescminterp.h
test/: simple-loop.bse
tests/: Makefile.am
tests/bse/: Makefile.am  cxxbinding.cc
tests/latency/: Makefile.am
tools/: Makefile.am  bsewavetool.cc  magictest.c  mathtool.c
